# angle_err_estimator

./: CMakeLists.txt  package.xml
include/: estimator.h  params.h  simulator.h
launch/: estimator.launch
msg/: Meas.msg
src/: estimator.cpp  estimator_node.cpp  params.cpp  simulationNode.cpp  simulator.cpp  simulator_node.cpp
